Adicionei um mecanismo para atualizar as turmas da página inicial

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -59,6 +59,7 @@
                 <h6 class="sidebar-collapse collapse in"><strong>EDITAR PÁGINAS</strong></h6>
                 <ul class="nav nav-sidebar sidebar-collapse collapse in">
                     <li><a href="{{ url_for('crud_attendances.edit_attendance') }}">Informações para contato</a></li>
+                    <li><a href="{{ url_for('crud_classes.add_first_class') }}">Atualizar turmas da página inicial</a></li>
                     <li><a href="#subjects" data-toggle="collapse">Disciplinas
                         <span class="caret"></span></a>
                         <ul id="subjects" class="collapse">
