--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <h2>Bem vindo a {{ post_graduation.name }}</h2>
+{% if msg %}
+<div class="form-success">
+    <p>{{ msg }}</p>
+</div>
+{% endif %}
 
 
 {% endblock %}
