Ajeitei alguns pequenos bugs

--- a/templates/public/subjectsinclasses.html
+++ b/templates/public/subjectsinclasses.html
@@ -27,10 +27,10 @@
                                     <div class="form-group">
                                         {{ form.csrf_token }}
                                         {{ form.year.label }}
-                                        {{ form.year(required="true", class="form-control", placeholder="2017") }}
+                                        {{ form.year(required="true", class="form-control") }}
                                         </br>
                                         {{ form.period.label }}
-                                        {{ form.period(required="true", class="form-control", placeholder="1") }}
+                                        {{ form.period(required="true", class="form-control") }}
                                         </br>
                                         {{ form.create(class="form-control") }}
                                     </div>
