--- a/templates/admin/add_events.html
+++ b/templates/admin/add_events.html
@@ -1,11 +1,12 @@
 {% extends "admin/layout.html" %}
 {% block styles %}
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/{{ post_graduation }}.css"/>
+<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/ppgp.css"/>
 {% endblock %}
 
 {% block scripts %}
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script> 
+<script src="/static/jquery3/datepicker-pt-BR.js"></script>
 <script type="text/javascript">
 $(function() {
     $("#datepickerInitial").datepicker({
