--- a/templates/admin/add_news.html
+++ b/templates/admin/add_news.html
@@ -1,7 +1,7 @@
 {% extends "admin/layout.html" %}
 
 {% block content %}
-<div class="col-md-6">
+<div class="col-md-12">
 <div class="panel panel-danger" style="margin-left: -4%">
 <div class="panel-heading text-center">
     <h4>Adicionar notícia<h4/>
@@ -22,7 +22,7 @@
     <br/>
 
     {{ form.body.label }}<br/>
-    {{ form.body(required='true', class="form-control") }}
+    {{ form.body(required='true', class="form-control", style="height: 250px") }}
     <br/>
     
     {{ form.create(class="form-control")}}
