--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -6,6 +6,7 @@
 
 {% block scripts %}
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script> 
+<script src="/static/jquery3/datepicker-pt-BR.js"></script>
 <script type="text/javascript">
 $(function() {
     $("#datepickerInitial").datepicker({
