--- a/templates/admin/delete_events.html
+++ b/templates/admin/delete_events.html
@@ -8,6 +8,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script> 
+<script src="/static/jquery3/datepicker-pt-BR.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
     $("input[name=create]").val("Deletar");
