--- a/templates/admin/edit_projects.html
+++ b/templates/admin/edit_projects.html
@@ -9,7 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-$("input[name=create]").val("Deletar");
+$("input[name=create]").val("Editar");
 var projects = {{ projects|tojson|safe }};
 var projects = JSON.parse(projects);
 console.log(projects);
