--- a/templates/admin/edit_scheduled_reports.html
+++ b/templates/admin/edit_scheduled_reports.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
     {{ form.time.label(class="label-edit") }}
     {{ form.time(required='true', class="form-control") }}
     <br/>
-    {{ form.create }}
+    {{ form.create(class="form-control") }}
     </div>
 </form>
 </div>
