--- a/templates/admin/subjects.html
+++ b/templates/admin/subjects.html
@@ -11,6 +11,7 @@
 <form method="POST" action="{{ url_for('crud_subjects.subjects') }}">
     <div class="form-group">
     {{ form.csrf_token }}
+    {{ form.course_type(required='true', style="display:none;") }}
     
     <br/>
     
