--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -225,6 +225,43 @@
             <p><small>(Sem eventos agendados no momento.)</small></p>
             {% endif %}
 
+            {% if final_reports %}
+            <section>
+                <header>
+                    <h2><span class="glyphicon glyphicon-pushpin"></span> Apresentações</h2>
+                </header>
+                <p>Apresentações públicas dos discentes diante de suas bancas examinadoras.</p>
+                <table class="schedule-table">
+                    {% for report in final_reports %}
+                    {% if "deleted" not in report %}
+                    {% if loop.revindex < 3 %}
+                    <tr class="schedule-container">
+                        <td class="schedule-container-date">
+                            <ul>
+                                <li class="schedule-date-day">{{ report.time.strftime("%d") }}</li>
+                                <li class="schedule-date-month">{{ report.time.strftime("%b").upper() }}</li>
+                                <li class="schedule-date-year">{{ report.time.strftime("%Y") }}</li>
+                            </ul>
+                        </td>
+                        <td class="schedule-container-info">
+                            <h4>{{ report.title }}
+                                <br/>
+                                <small>{{ report.author }}</small>
+                            </h4>
+                            <p>
+                                Local: {{ report.location }}<br/>
+                                Horário: {{ report.time.strftime("%H:%M") }}<br/>
+                            </p>
+                        </td>
+                    </tr>
+                    {% endif %}
+                    {% endif %}
+                    {% endfor %}
+                </table>
+                {% else %}
+                <p><small>(Não há nenhuma apresentação do Programa agendada.)</small></p>
+                {% endif %}
+            </section>
         </section>
         <section>
             <header>
