--- a/templates/public/students.html
+++ b/templates/public/students.html
@@ -22,7 +22,7 @@
         <table class="table">
             <thead>
                 <th>Nome</th>
-                <th>Coordenador</th>
+                <th>Orientador</th>
                 <th>Matricula</th>
             </thead>
             <tr>
