--- a/templates/public/articles.html
+++ b/templates/public/articles.html
@@ -12,7 +12,7 @@
 
 <section>
     <header class="page-header">
-        <h2>Livros publicados</h2>
+        <h2>Artigos publicados</h2>
     </header>
 
     {% for article in publications.articles %}
