--- a/templates/admin/add_chapter.html
+++ b/templates/admin/add_chapter.html
@@ -11,24 +11,24 @@
 <form method="POST" action="{{ url_for('crud_books.add_chapter') }}">
     <div class="form-group">
     {{ form.csrf_token }}
-    
+
     <br/>
-    
+
     {{ form.book_title.label }}<br/>
     {{ form.book_title(required='true', class="form-control", placeholder="Ex: Percursos da Literatura Brasileira") }}
 
     <br/>
-    
+
     {{ form.book_authors.label }}<br/>
     {{ form.book_authors(required='true', class="form-control", placeholder="Ex: Madureira") }}
 
     <br/>
-    
+
     {{ form.chapter_title.label }}<br/>
     {{ form.chapter_title(required='true', class="form-control", placeholder="Ex: Como ler textos de ficção") }}
 
     <br/>
-    
+
     {{ form.chapter_authors.label }}<br/>
     {{ form.chapter_authors(required='true', class="form-control", placeholder="Ex: Carlos Silveira e Julio Macedo") }}
 
@@ -38,19 +38,19 @@
     {{ form.edition(required='true', class="form-control", type='number', step='1', min='1', max='300', placeholder='ex: 1') }}
 
     <br/>
-    
+
     {{ form.location.label }}<br/>
     {{ form.location(required='true', class="form-control", placeholder="Ex: Natal") }}
 
     <br/>
-    
+
     {{ form.publisher.label }}<br/>
     {{ form.publisher(required='true', class="form-control", placeholder="Ex: Editora 34") }}
 
     <br/>
 
     {{ form.year.label }}<br/>
-    {{ form.year(required='true', type='number', step='1', placeholder='2002', class="form-control") }}    
+    {{ form.year(required='true', type='number', step='1', placeholder='2002', class="form-control") }}
 
     <br/>
 
@@ -58,10 +58,16 @@
     {{ form.pages(required='true', placeholder="p. 63-76", class="form-control") }}    
 
     <br/>
-    
+    {{ form.link.label }}<br/>
+    {{ form.link(class="form-control", placeholder="Ex: https://google.com")}}
+    <p class="form-text text-muted">
+        Por favor insira uma URL válida, não esqueça do https://
+    </p>
+    <br/>
+
     {{ form.create(class="form-control")}}
     </div>
-    
+
 </form>
 <br/>
 <p>
