--- a/templates/admin/delete_books.html
+++ b/templates/admin/delete_books.html
@@ -22,7 +22,7 @@ $(document).ready(function() {
             })
         }
     }
-    
+
     $("#list").select2({
         data: listOfBooks
     });
@@ -36,6 +36,7 @@ $(document).ready(function() {
         $("input[name=edition]").val(publications.books[indexInBooks].edition);
         $("input[name=location]").val(publications.books[indexInBooks].location);
         $("input[name=publisher]").val(publications.books[indexInBooks].publisher);
+        $("input[name=link]").val(publications.books[indexInBooks].link);
         $("input[name=year]").val(publications.books[indexInBooks].year);
         $("input[name=index]").val(indexInBooks);
     });
@@ -81,8 +82,11 @@ $(document).ready(function() {
     {{ form.publisher.label }}<br/>
     {{ form.publisher(required='true', class="form-control", readonly="readonly") }}
     <br/>
+    {{ form.link.label }}<br/>
+    {{ form.link(required='true', class="form-control", readonly="readonly") }}
+    <br/>
     {{ form.year.label }}<br/>
-    {{ form.year(required='true', type='number', step='1', placeholder='2002', class="form-control", readonly="readonly") }}    
+    {{ form.year(required='true', type='number', step='1', placeholder='2002', class="form-control", readonly="readonly") }}
     <br/>
     <br/>
     {{ form.create(class="form-control")}}
