--- a/templates/admin/edit_books.html
+++ b/templates/admin/edit_books.html
@@ -22,7 +22,7 @@ $(document).ready(function() {
             })
         }
     }
-    
+
     $("#list").select2({
         data: listOfBooks
     });
@@ -36,6 +36,7 @@ $(document).ready(function() {
         $("input[name=edition]").val(publications.books[indexInBooks].edition);
         $("input[name=location]").val(publications.books[indexInBooks].location);
         $("input[name=publisher]").val(publications.books[indexInBooks].publisher);
+        $("input[name=link]").val(publications.books[indexInBooks].link);
         $("input[name=year]").val(publications.books[indexInBooks].year);
         $("input[name=index]").val(indexInBooks);
     });
@@ -82,8 +83,13 @@ $(document).ready(function() {
     {{ form.publisher(required='true', class="form-control") }}
     <br/>
     {{ form.year.label }}<br/>
-    {{ form.year(required='true', type='number', step='1', placeholder='2002', class="form-control") }}    
+    {{ form.year(required='true', type='number', step='1', placeholder='2002', class="form-control") }}
     <br/>
+    {{ form.link.label }}<br/>
+    {{ form.link(class="form-control", placeholder="Ex: https://google.com")}}
+    <p class="form-text text-muted">
+        Por favor insira uma URL válida, não esqueça do https://
+    </p>
     <br/>
     {{ form.create(class="form-control")}}
     </div>
