--- a/templates/admin/edit_projects.html
+++ b/templates/admin/edit_projects.html
@@ -22,7 +22,7 @@ for( i = 0; i < projects.length; i++){
             })
         }
     }
-    
+
     $("#list").select2({
         data: listOfProjects
     });
@@ -32,12 +32,10 @@ for( i = 0; i < projects.length; i++){
         $("#form-edit").css("visibility", "visible");
         $("input[name=title]").val(projects[indexInProjects].title);
         $("input[name=subtitle]").val(projects[indexInProjects].subtitle);
-        $("input[name=description]").val(projects[indexInProjects].description);
+        $("textarea[name=description]").val(projects[indexInProjects].description);
         $("input[name=situation]").val(projects[indexInProjects].situation);
         $("input[name=year]").val(projects[indexInProjects].year);
         $("input[name=email]").val(projects[indexInProjects].email);
-        $("input[name=dt_init]").val(projects[indexInProjects].dt_init);
-        $("input[name=dt_end]").val(projects[indexInProjects].dt_end);
         $("input[name=project_id]").val(projects[indexInProjects]._id.$oid);
     });
 
@@ -81,12 +79,6 @@ for( i = 0; i < projects.length; i++){
     <br/>
     {{ form.email.label }}<br/>
     {{ form.email(required='true', class="form-control") }}
-    <br/>
-    {{ form.dt_init.label }}<br/>
-    {{ form.dt_init(required='true', class="form-control")}}
-    <br/>
-    {{ form.dt_end.label }}<br/>
-    {{ form.dt_end(class="form-control")}}
     <br/>
     {{ form.create(class="form-control")}}
     </div>
