Changed description big and now you can insert html inside it

--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -300,7 +300,7 @@
         <header>
             <h2><span class="glyphicon glyphicon-home"></span> Sobre o Programa</h2>
         </header>
-        {{ std.post_graduation.descriptionBig }}
+        <p>{{ std.post_graduation.descriptionBig|safe }}</p>
     </section>
 </div>
 
