--- a/templates/admin/edit_covenants.html
+++ b/templates/admin/edit_covenants.html
@@ -32,6 +32,8 @@ $(document).ready(function() {
         $("#form-edit").css("visibility", "visible");
         $("input[name=name]").val(integrations.institutionsWithCovenant[indexInCovenants].name);
         $("input[name=initials]").val(integrations.institutionsWithCovenant[indexInCovenants].initials);
+        $("select[name=status]").val(integrations.institutionsWithCovenant[indexInCovenants].status);
+        $("input[name=objective]").val(integrations.institutionsWithCovenant[indexInCovenants].objective);
         $("input[name=index]").val(indexInCovenants);
     });
 
@@ -64,6 +66,12 @@ $(document).ready(function() {
     <br/>
     {{ form.initials.label }}
     {{ form.initials(required='true', class="form-control") }}
+    <br/>
+    {{ form.status.label }}
+    {{ form.status(required='true', class="form-control") }}
+    <br/>
+    {{ form.objective.label }}
+    {{ form.objective(required='true', class="form-control") }}
     <br/>
     <label class="btn btn-default">
         {{ form.logo }}
